fix dark mode not taking up whole screen

--- a/src/Skewb.css
+++ b/src/Skewb.css
@@ -4,6 +4,7 @@ body {
 
 .app {
     padding: 12px;
+    height: calc(100vh - 24px);
 }
 
 .app.dark-mode {
